demo/kagent/kagent-ui.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent-ui-httproute
  namespace: kagent
spec:
  hostnames:
  - kagent.192.168.39.200.nip.io
  parentRefs:
  - name: default-gtw
    namespace: default
    port: 80
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kagent-ui
      namespace: kagent
      port: 8080
